--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "tropicamenu",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
+  "engines": {
+    "node": "v16.2.0"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.1",
@@ -13,12 +17,8 @@
     "serve-favicon": "^2.5.0",
     "web-vitals": "^1.1.2"
   },
-  "main": "server.js",
-  "engines": {
-    "node": "v16.2.0"
-  },
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
